Bug 136152 - Physics Animation Effects do not correctly handle parallel animation effects which don't start from shape's original position
Summary: Physics Animation Effects do not correctly handle parallel animation effects ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-26 15:52 UTC by Sarper Akdemir (allotropia)
Modified: 2020-08-28 08:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
An ODP that demonstartes the problem (10.68 KB, application/vnd.oasis.opendocument.presentation)
2020-08-26 15:54 UTC, Sarper Akdemir (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sarper Akdemir (allotropia) 2020-08-26 15:52:10 UTC
Description:
When there's an animation effect that manipulates a shape's position in parallel with a physics animation, if the animation effect starts from a position other than the shape's original position - physics animation interpret this as a move from original position to wherever animation effect start from, colliding with every shape on the way.

Steps to Reproduce:
1.Get the odp attached
2.Play the slideshow

or

1.Add a shape(1) with "Emphasis: Fall Simulated" animation effect
2.Add another shape(2) with in parallel path motion animation effect where shape(1) is between shape(2) and wherever the animation path starts.
3.Play the slideshow

Actual Results:
Path motion animated shape(2) collide with the physics animation shape(1) as if it just moved to there.

Expected Results:
Path motion animated shape(2) shouldn't collide with the physics animation shape(1) and should just "teleport" to wherever the path motion starts.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: d29c27af4aff3f5268bd4a07647fd7435603ba11
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Sarper Akdemir (allotropia) 2020-08-26 15:54:11 UTC
Created attachment 164722 [details]
An ODP that demonstartes the problem
Comment 2 Commit Notification 2020-08-28 07:25:30 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/490cab0539660aa8e1b51f0555b890f69940c04d

tdf#136152: make physics animation effects handle animations with jumpy starts

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.